台灣證交所/OTC 的錯誤碼 20048,30048, OrderSt 應為 ExchangeCanceled;

--- a/OmsErrCode/OmsErrCodeAct.cfg
+++ b/OmsErrCode/OmsErrCodeAct.cfg
@@ -95,3 +95,8 @@
 40010 : St=ExchangeNoLeavesQty
 
 # ----------------------------------------------------------------------------
+# TIF or FOK: ExchangeCanceled
+20048 : St=ExchangeCanceled
+30048 : St=ExchangeCanceled
+# 期交所使用成交回報(成交量=0)來處理期交所刪單,
+# 所以會在 OmsTwfFilled 處理, 不用在此設定: 40051, 40053.
