twf: 報價單可單邊改價. twf: TwfExgMapMgr::OnP06Updated() 設定期貨商的 FcmId. twf: 期交所流量可設定 FcInterval 預設為 1 秒. f9utw: 提供完整的「可測試」能力.

--- a/OmsErrCode/OmsErrCode.40xxx.cfg
+++ b/OmsErrCode/OmsErrCode.40xxx.cfg
@@ -35,11 +35,12 @@
 40032 =                                                    | 減量成功,但要求量大於可減量          # 若有報價最低數量限制，有效委託量改為限制之報價最低數量，否則有效委託量改為 0(視為取消)
 40033 =                                                    | 買賣價不得超過該報價商品之價差限制
 40034 =                                                    | 買價超過賣價
-40035 =                                                    | 雙邊報價剩餘量少於最低數量限制(目前的撮合已經不會有此訊息)
+40035 =                                                    | 報價單邊改價,未改價邊剩餘口數0不接受單邊改價
 40036 =                                                    | 單邊報價剩餘量少於最低數量限制
 40037 =                                                    | 詢價已存在不予接受
 40038 =                                                    | 市價單(及一定範圍市價委託)不允許當日有效委託
 40039 =                                                    | 減量口數錯誤
+40040 =                                                    | 報價單邊改價,價格輸入錯誤
 40041 =                                                    | 交割年月錯誤
 40042 =                                                    | 履約價格錯誤
 40043 =                                                    | 結算會員錯誤
