--- a/f9omsrc/forms/ApiTwf1Req.cfg
+++ b/f9omsrc/forms/ApiTwf1Req.cfg
@@ -37,14 +37,6 @@ REQ.TwfRpt, $Tx_TwfRpt {
   ExgTime
 }
 # --------------------------------------
-# 刪改查要求: 必須提供可找回原委託的Key:
-# - IniSNO
-#   - 此時若有提供 Market + SessionId + BrkId + OrdNo, 則必須正確!
-# - Market + SessionId + BrkId + OrdNo
-$ApiReqTwfDcq = {
-  $ApiReqTwf0Base
-  IniSNO,   $Tx_IniSNO
-}
 # 台灣期權 [刪改查] 要求.
 REQ.TwfChg, $Tx_TwfChg {
   Kind      # 如果 Client 沒填, 則系統根據 Qty、Pri、PriType 自動判斷.
@@ -52,5 +44,5 @@ REQ.TwfChg, $Tx_TwfChg {
   Pri
   PriType
   TimeInForce
-  $ApiReqTwfDcq
+  $ApiReqTwfDcqBase
 }
