--- a/f9omsrc/forms/ApiTwf9Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf9Rpt.cfg
@@ -1,7 +1,7 @@
 ﻿#
-# ApiTwf1Rpt.cfg
+# ApiTwf9Rpt.cfg
 #
-# API回報表單設定: 台灣期權/一般下單
+# API回報表單設定: 台灣期權/報價(雙邊單 Bid+Offer)回報
 #
 ###########################################################
 $include: ApiTwf0Rpt.cfg
@@ -27,93 +27,94 @@ $include: ApiTwf0Rpt.cfg
 #   * request abandon 沒有對應的 order
 #   * 有額外的 2 個沒放進 seed::Fields 的欄位: ErrCode, AbandonReason
 #
-$RptTwf1NewFields = {
+$RptTwf9NewFields = {
   $RptTwf0NewFields
   SalesNo
-  Side
-  IniPosEff/PosEff
-  IniQty/Qty
-  Pri
-  PriType
-  IniTimeInForce/TimeInForce
+  IniBidQty/BidQty
+  BidPri
+  IniOfferQty/OfferQty
+  OfferPri
+  TimeInForce, $Tx_TimeInForceQ
 }
-RPT.TwfNew : abandon {
-  $RptTwf1NewFields
+RPT.TwfNewQ : abandon {
+  $RptTwf9NewFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
 }
-RPT.TwfRpt : abandon {
-  $RptTwf1NewFields
+RPT.TwfRptQ : abandon {
+  $RptTwf9NewFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
 }
 
-$RptTwf1ChgFields = {
+$RptTwf9ChgFields = {
   $RptOrdKey
   $RptReqBase
   $RptReqFrom
-  ChgQty    /Qty
-  ChgPri    /Pri
-  ChgPriType/PriType
+  ChgBidQty   /BidQty
+  ChgOfferQty /OfferQty
 }
-RPT.TwfChg : abandon {
-  $RptTwf1ChgFields
+RPT.TwfChgQ : abandon {
+  $RptTwf9ChgFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
 }
 ###########################################################
-RPT.TwfNew {
-  $RptTwf1NewFields
+RPT.TwfNewQ {
+  $RptTwf9NewFields
 }
-RPT.TwfRpt {
-  $RptTwf1NewFields
+RPT.TwfRptQ {
+  $RptTwf9NewFields
 }
-RPT.TwfChg {
-  $RptTwf1ChgFields
+RPT.TwfChgQ {
+  $RptTwf9ChgFields
 }
+
+# 與一般單的成交回報相同, 但多了一個 Side 欄位.
 RPT.TwfFil {
   MatchKey
   MatchTime/Time
   MatchQty /Qty
   MatchPri /Pri
-}
-RPT.TwfFil2 {
-  MatchKey
-  MatchTime/Time
-  MatchQty /Qty
-  MatchPri1/Pri
-  MatchPri2/PriLeg2
-}
-###########################################################
-$RptTwfOrd1Last = {
-  LastExgTime
-  LastPri
-  LastPriType
-  LastTimeInForce
-  LastPriTime
+  MatchSide/Side
 }
 
-RPT.TwfOrd : TwfNew {
-  $RptOrd1Qty
-  $RptTwfOrd1Last
-  PosEff
+###########################################################
+$RptTwfOrd9Qty = {
+  $RptOrdSt
+  ReportSide
+  BidBeforeQty
+  BidAfterQty
+  BidLeavesQty
+  OfferBeforeQty
+  OfferAfterQty
+  OfferLeavesQty
+  $RptOrdMsg
 }
-RPT.TwfOrd : TwfRpt {
-  $RptOrd1Qty
-  $RptTwfOrd1Last
-  PosEff
+$RptTwfOrd9Last = {
+  LastExgTime
+  LastPriTime
+  LastBidPri
+  LastOfferPri
 }
-RPT.TwfOrd : TwfChg {
-  $RptOrd1Qty
-  $RptTwfOrd1Last
+
+RPT.TwfOrdQ : TwfNewQ {
+  $RptTwfOrd9Qty
+  $RptTwfOrd9Last
 }
-RPT.TwfOrd : TwfFil {
-  $RptOrd1Qty
-  $RptOrdCum
+RPT.TwfOrdQ : TwfRptQ {
+  $RptTwfOrd9Qty
+  $RptTwfOrd9Last
 }
-RPT.TwfOrd : TwfFil2 {
-  $RptOrd1Qty
-  $RptOrdCum
-  Leg1CumAmt
-  Leg2CumAmt
+RPT.TwfOrdQ : TwfChgQ {
+  $RptTwfOrd9Qty
+  $RptTwfOrd9Last
+}
+RPT.TwfOrdQ : TwfFil {
+  $RptTwfOrd9Qty
+  LastFilledTime
+  BidCumQty
+  BidCumAmt
+  OfferCumQty
+  OfferCumAmt
 }
