--- a/f9omsrc/forms/ApiTwfAll.cfg
+++ b/f9omsrc/forms/ApiTwfAll.cfg
@@ -1,14 +1,15 @@
 ﻿#
-# ApiTwsAll.cfg
+# ApiTwfAll.cfg
 #
-# API交易表單設定: 載入全部TWS.API表單
+# API交易表單設定: 載入全部TWF.API表單
 #
 # ----------------------------------------------------------------------------
 $TxLang = ${TxLang:-zh}     # 如果「沒設定$TxLang」或「$TxLang為空白」: 則使用正體中文(zh).
 $include: Api_${TxLang}.cfg # 載入翻譯檔.
 
-$include: ApiTwsReq.cfg
-$include: ApiTwsRpt.cfg
-
-# 事件回報.
-$include: ApiEvSesSt.cfg
+$include: ApiTwf1Req.cfg
+$include: ApiTwf1Rpt.cfg
+$include: ApiTwf7Req.cfg
+$include: ApiTwf7Rpt.cfg
+$include: ApiTwf9Req.cfg
+$include: ApiTwf9Rpt.cfg
