--- a/f9omsrc/forms/Api_zh.cfg
+++ b/f9omsrc/forms/Api_zh.cfg
@@ -31,6 +31,13 @@ $Tx_TwfRpt        = 台期權回報
 
 $Tx_TwfNewQR      = 台期權詢價
 
+$Tx_TwfNewQ       = 台期權報價
+$Tx_TwfAFDQ       = 台期權報價刪單, 提供的欄位必須與初始要求相同
+$Tx_TwfChgQ       = 台期權報價刪改查
+$Tx_TwfDeleteQ    = 台期權報價刪單
+$Tx_TwfQueryQ     = 台期權報價查詢
+$Tx_TwfRptQ       = 台期權報價回報
+
 
 $Tx_MarketTwf     = $Tx_Market,     {f=期貨,o=選擇權}
 $Tx_SessionIdTwf  = $Tx_SessionId,  {N=日盤,A=夜盤}
@@ -52,3 +59,4 @@ $Tx_QtyChg        = 數量,           '=0:刪單,<0:刪減數量,>0:改後數量
 $Tx_OrdNo         = 委託書號
 $Tx_IniSNO        = 初始序號,       刪改查要操作的初始下單序號(各主機自編的序號)
 $Tx_TimeInForce   = 時間條件,       {=當日有效,I=IOC,F=FOK}
+$Tx_TimeInForceQ  = 時間條件,       {=當日有效,8=期交所定時刪除}
