--- a/f9omsrc/forms/ApiAll.cfg
+++ b/f9omsrc/forms/ApiAll.cfg
@@ -8,16 +8,11 @@ $TxLang = ${TxLang:-zh}     # 如果「沒設定$TxLang」或「$TxLang為空白
 $include: Api_${TxLang}.cfg # 載入翻譯檔.
 
 # 證券.
-$include: ApiTwsReq.cfg
-$include: ApiTwsRpt.cfg
+$include: ApiTwsAll.cfg
 
 # 期權.
-$include: ApiTwf1Req.cfg
-$include: ApiTwf1Rpt.cfg
-$include: ApiTwf7Req.cfg
-$include: ApiTwf7Rpt.cfg
-#$include: ApiTwf9Req.cfg
-#$include: ApiTwf9Rpt.cfg
+$include: ApiTwfAll.cfg
 
 # 事件回報.
-#$include: ApiEvInfo.cfg
+$include: ApiEvInfo.cfg
+$include: ApiEvSesSt.cfg
