--- a/f9omsrc/forms/ApiTwf0Req.cfg
+++ b/f9omsrc/forms/ApiTwf0Req.cfg
@@ -21,4 +21,23 @@ $ApiReqTwf0New = {
   Symbol,  $Tx_SymbolTwf
   IvacNo,  $Tx_IvacNo
   SubacNo, $Tx_SubacNo
+
+  # D:專線下單(含VPN、封閉型專屬網路); A:應用程式介面(API)下單;
+  # M:行動載具下單;  W:網站(Web Site)下單; P:個人電腦軟體下單;
+  # V:語音下單;  G:一般委託下單(書面、電話、電報等方式)
+  OrderSource = A
+
+  # 行情資訊來源註記
+  # - 由行情資訊廠商提供者，填入該行情資訊廠商代碼(詳行情資訊廠商代碼表註);
+  # - 由期貨商自行提供行情資訊者，填入 999;
+  InfoSource = 999
+}
+# --------------------------------------
+# 刪改查要求: 必須提供可找回原委託的Key:
+# - IniSNO
+#   - 此時若有提供 Market + SessionId + BrkId + OrdNo, 則必須正確!
+# - Market + SessionId + BrkId + OrdNo
+$ApiReqTwfDcqBase = {
+  $ApiReqTwf0Base
+  IniSNO,   $Tx_IniSNO
 }
