f9rc_ClientLogFlag_* 與 oms 有關的, 改成 f9oms_ClientLogFlag_*; Add C# 範例. OmsRcClient_UT: 示範在 OnClientReport() 印出收到的回報; OmsErrCodeAct: 增加可改變 ErrCode; f9utw: 增加 http 管理功能;

--- a/OmsErrCode/OmsErrCodeAct.cfg
+++ b/OmsErrCode/OmsErrCodeAct.cfg
@@ -13,7 +13,7 @@
 #   * 「依序檢查」處置方式, 使用「首個條件成立」的處置方式.
 # * 每行可能會有多組 arg=value, 中間使用「|」分隔.
 # * arg 分成 2 類:
-#   * 行為類: Rerun, St...
+#   * 行為類: Rerun, St, ErrCode...
 #   * 條件類: During, OType, Src...
 # * arg 及其 value:
 #   * 行為類(處置方式)
@@ -29,6 +29,8 @@
 #       * ef or ExchangeNoLeavesQty
 #       * f7 or ExchangeCanceling
 #       * fa or ExchangeCanceled
+#     * ErrCode=x
+#       * 改變 ErrCode 的值, 改變後的 ErrCode 不會再循環參照 Act.
 #   * 條件類, 若設定多個條件, 則必須同時成立.
 #     * During=begin-end
 #       * 有效期間: begin <= 現在時間 <= end
@@ -100,3 +102,9 @@
 30048 : St=ExchangeCanceled
 # 期交所使用成交回報(成交量=0)來處理期交所刪單,
 # 所以會在 OmsTwfFilled 處理, 不用在此設定: 40051, 40053.
+
+# ----------------------------------------------------------------------------
+# 40248:「警告該 session 以達設定之流量值80%」, 40248:「... 90%」:
+# 將 ErrCode 改成 0=成功;
+40248 : ErrCode=0
+40249 : ErrCode=0
