Add: f9omstwUT; 改變: ec=10300 的內容, 移除 10301; 改變: ec=10200 的內容, 增加: 現股當沖相關 10201,10202,10210,10211,10212; Add: OmsCoreSt::BadCore; 狀態; Add: OmsCoreMgr::RemoveCurrentCore(); bool OmsCore::RunCoreTask(task); 增加返回值; 完善 OmsImporter 機制;

--- a/f9omsrc/forms/Api_zh.cfg
+++ b/f9omsrc/forms/Api_zh.cfg
@@ -17,7 +17,7 @@ $Tx_TwsRpt        = 台股回報
 
 $Tx_MarketTws     = $Tx_Market,     {T=台灣上市,O=台灣上櫃,E=台灣興櫃}
 $Tx_SessionIdTws  = $Tx_SessionId,  {N=一般,F=盤後定價,O=零股}
-$Tx_IvacNoFlagTws = 投資人下單類別, {=一般,A=自動化設備,D=DMA,I=Internet,V=Voice,P=API}
+$Tx_IvacNoFlagTws = 投資人下單類別, {1=一般,2=ATM,3=DMA,4=Internet,5=Voice,6=API}
 $Tx_SymbolTws     = 股票代號
 $Tx_PriTypeTws    = 價格別,         {=限價,M=市價}
 $Tx_QtyTws        = 數量,           股數
