--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -2,6 +2,8 @@
 # OMS 風控失敗
 #
 # --------------------------------------------
+
+# U8=uint64_t,冒號後的「,」表示輸出字串包含千位分隔符號.
 $FQTY = U8:,
 $FAMT = U8:,
 
@@ -13,16 +15,15 @@ $FAMT = U8:,
 #   * Format: 參考各型別的格式化輸出參數.
 #
 # 格式化範例:
-# * 翻譯設定: 庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/已委託未成交={:Leaves:$FQTY:}/買進成交={:FilledBuy:$FQTY:}/賣出成交={:FilledSell:$FQTY:}/此筆新增={:Add:$FQTY:}
-# * OMS訊息:  Bal=2126|Leaves=0|FilledBuy=0|FilledSell=0|Add=10000|Over=7874
-# * 翻譯後:   庫存不足 7,874: 庫存=2,126/已委託未成交=0/買進成交=0/賣出成交=0/此筆新增=10,000
+# * 翻譯設定: 現股庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/未成交={:Leaves:$FQTY:}/已成交={:Filled:$FQTY:}/此筆新增={:Add:$FQTY:}/旗標={:RFlags:}
+# * OMS訊息:  Bal=7000|Leaves=2000|Filled=3000|Add=55000|Over=53000|RFlags=X,0,0
+# * 翻譯後:   現股庫存不足 53,000: 庫存=7,000/未成交=2,000/已成交=3,000/此筆新增=55,000/旗標=X,0,0
 # 若翻譯設定為「-」則使用原始「OMS訊息」.
-
 # --------------------------------------------
 10000 = Ivr not found                  | 找不到下單帳號(或帳號未啟用)
 10001 = Bad OType                      | OType 不正確或不支援
 
-10101 = Symbol not found               | 找不到商品資料:市價單無法風控
+10101 = Symbol not found               | 找不到商品資料
 10102 = Symbol price not found         | 參考價不存在,不可交易
 10103 = Bad price                      | 限價單沒填價格
 10104 = Over PriUpLmt                  | 超過漲停價
@@ -42,30 +43,32 @@ zh: 下單數量超過上限 {:MaxQty:} (整張的股數 {:ShUnit:})
 }
 
 # --------------------------------------------
+# 現股庫存不足: ...|RFlags=A,R,S
+# A: 股票現股當沖旗標(X=可先賣 or Y=必須先買 or 「-」=不可現沖)
+# R: 帳號權限(HEX不含0x)
+#    0x01: bit0 允許 [現股先買後賣當沖]; 0x02: bit1 允許 [現股先賣後買當沖];
+# S: 帳號文件簽署情況(HEX不含0x)
+#    0x01:當沖先買後賣概括授權書; 0x02:當沖先買後賣風險預告書;
+#    0x04:當沖先賣後買概括授權書; 0x08:當沖先賣後買風險預告書;
 10200 = {
 en: -
-zh: 庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/已委託未成交={:Leaves:$FQTY:}/買進成交={:FilledBuy:$FQTY:}/賣出成交={:FilledSell:$FQTY:}/此筆新增={:Add:$FQTY:}
+zh: 現股庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/未成交={:Leaves:$FQTY:}/已成交={:Filled:$FQTY:}/此筆新增={:Add:$FQTY:}/旗標={:RFlags:}
 }
 
+# IFlags=R,S
+10201 = | 帳號禁止現股當沖/旗標={:IFlags:}
+10202 = | 商品禁止現股當沖
+# 現股賣出(OType='0',可現股當沖), 帳號自有可賣數量不足. 可賣=庫存+買可沖(買成交)-賣用量(賣剩餘+賣成交)
+10210 = | 可賣不足 {:Over:$FQTY:}: 可賣={:Self:$FQTY:}/此筆新增={:Add:$FQTY:}/庫存={:Bal:$FQTY:}/買可沖={:Filled:$FQTY:}/已賣={:Used:$FQTY:}
+# 現股當沖賣出(OType='d',但不可先賣當沖,原因請參考RFlags), 帳號自有可賣數量不足.
+10211 = | 可賣不足 {:Over:$FQTY:}: 可賣={:Self:$FQTY:}/此筆新增={:Add:$FQTY:}/庫存={:Bal:$FQTY:}/買可沖={:Filled:$FQTY:}/已賣={:Used:$FQTY:}/旗標={:RFlags:}
+10212 = | 或有券源不足 {:Over:$FQTY:}: 或有券源={:SeQty:$FQTY:}/已用量={:Used:$FQTY:}/自有可賣={:Self:$FQTY:}/此筆新增={:Add:$FQTY:}
+
 # --------------------------------------------
-# {Used} 為券商提供的已用額, 與 OMS 的下單無關.
 10300 = {
 en: -
-zh: 額度不足 {:Over:$FAMT:}: 限額={:LmtAmt:$FAMT:}/委託未成交={:Leaves:$FAMT:}/成交返還={:FilledRtn:$FAMT:}/成交用量={:FilledUse:$FAMT:}/此筆新增={:Add:$FAMT:}/額外已用={:Used:$FAMT:}
+zh: 整戶額度不足 {:Over:$FAMT:}: 限額={:LmtAmt:$FAMT:}/已用={:Used:$FAMT:}/此筆新增={:Add:$FAMT:}
 }
-10301 = {
-en: -
-zh: 買進額度不足 {:Over:$FAMT:}: 限額={:LmtBuy:$FAMT:}/委託未成交={:Leaves:$FAMT:}/成交返還={:FilledRtn:$FAMT:}/成交用量={:FilledUse:$FAMT:}/此筆新增={:Add:$FAMT:}/額外已用={:Used:$FAMT:}
-}
-# 10302 = {
-# en: Over LmtSell
-# }
-# 10303 = {
-# en: Over LmtAddBS
-# }
-# 10304 = {
-# en: Over LmtSubBS
-# }
 
 # --------------------------------------------
 
