OmsCore 在建構時就必須提供 TDay 及 forceTDay; 這樣可以在使用 core.TDay 時, 不用判斷 TDay 是否有效.

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -15,9 +15,9 @@ $FAMT = U8:,
 #   * Format: 參考各型別的格式化輸出參數.
 #
 # 格式化範例:
-# * 翻譯設定: 現股庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/未成交={:Leaves:$FQTY:}/已成交={:Filled:$FQTY:}/此筆新增={:Add:$FQTY:}/旗標={:RFlags:}
+# * 翻譯設定: 現股庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/賣未成交={:Leaves:$FQTY:}/賣已成交={:Filled:$FQTY:}/此筆新增={:Add:$FQTY:}/旗標={:RFlags:}
 # * OMS訊息:  Bal=7000|Leaves=2000|Filled=3000|Add=55000|Over=53000|RFlags=X,0,0
-# * 翻譯後:   現股庫存不足 53,000: 庫存=7,000/未成交=2,000/已成交=3,000/此筆新增=55,000/旗標=X,0,0
+# * 翻譯後:   現股庫存不足 53,000: 庫存=7,000/賣未成交=2,000/賣已成交=3,000/此筆新增=55,000/旗標=X,0,0
 # 若翻譯設定為「-」則使用原始「OMS訊息」.
 # --------------------------------------------
 10000 = Ivr not found                  | 找不到下單帳號(或帳號未啟用)
@@ -52,7 +52,7 @@ zh: 下單數量超過上限 {:MaxQty:} (整張的股數 {:ShUnit:})
 #    0x04:當沖先賣後買概括授權書; 0x08:當沖先賣後買風險預告書;
 10200 = {
 en: -
-zh: 現股庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/未成交={:Leaves:$FQTY:}/已成交={:Filled:$FQTY:}/此筆新增={:Add:$FQTY:}/旗標={:RFlags:}
+zh: 現股庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/賣未成交={:Leaves:$FQTY:}/賣成交={:Filled:$FQTY:}/此筆新增={:Add:$FQTY:}/旗標={:RFlags:}
 }
 
 # IFlags=R,S
