櫃號權限: 若「可自訂委託書號」且「有指定委託櫃號」，例如:「*,A,B」。 則下單時若有填「委託書號(或櫃號)」，則必須在設定的櫃號列表之中。

--- a/OmsErrCode/OmsErrCode.00xxx.cfg
+++ b/OmsErrCode/OmsErrCode.00xxx.cfg
@@ -39,11 +39,12 @@
 
 00400 = Over flow control               | 客戶端超過下單流量管制
 
-00500 = Bad OrdTeamGroupId              | 櫃號群組有誤
+00500 = Bad OrdTeamGroupId              | 委託櫃號群組有誤
 00501 = Order already exists            | 新單自編委託書,但委託書已存在
 00502 = OrdNo overflow                  | 自訂委託櫃號,但委託書號已用完
 00503 = OrdNo must empty                | 沒有自編委託櫃號(或委託書號)的權限,新單要求的 OrdNo 必須為空白
 00504 = OrdTeam used up                 | 委託櫃號已用完(或沒設定)
 00505 = OrdNoMap not found              | 委託書號對照表沒找到,可能是 MarketId 或 SessionId 不正確,或系統沒設定
+00506 = OrdTeam deny                    | 無此委託櫃號權限
 
 00900 = No ready line                   | 無可用的下單連線
