OmsRcAPI: forms 支援券商額外設定欄位. 請參考說明: f9omsrc/forms/ApiTwfAll.cfg; 或 f9omsrc/forms/ApiTwsAll.cfg;

--- a/f9omsrc/forms/ApiTwf1Req.cfg
+++ b/f9omsrc/forms/ApiTwf1Req.cfg
@@ -24,6 +24,7 @@ $ApiReqTwf1New = {
 REQ.TwfNew, $Tx_TwfNew {
   Kind = $RxKind_RequestNew
   $ApiReqTwf1New
+  ${Ex_Req_TwfNew:-}
 }
 
 # 台灣期權回報補單要求.
@@ -35,6 +36,7 @@ REQ.TwfRpt, $Tx_TwfRpt {
   ReportSt = f2   # ExchangeAccepted = 0xf2
   ErrCode
   ExgTime
+  ${Ex_Req_TwfRpt:-}
 }
 # --------------------------------------
 # 台灣期權 [刪改查] 要求.
@@ -45,4 +47,5 @@ REQ.TwfChg, $Tx_TwfChg {
   PriType
   TimeInForce
   $ApiReqTwfDcqBase
+  ${Ex_Req_TwfChg:-}
 }
