--- a/f9omsrc/forms/ApiTwf1Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf1Rpt.cfg
@@ -41,11 +41,13 @@ RPT.TwfNew : abandon {
   $RptTwf1NewFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
+  ${Ex_Rpt_TwfNew_Abandon:-}
 }
 RPT.TwfRpt : abandon {
   $RptTwf1NewFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
+  ${Ex_Rpt_TwfRpt_Abandon:-}
 }
 
 $RptTwf1ChgFields = {
@@ -60,22 +62,27 @@ RPT.TwfChg : abandon {
   $RptTwf1ChgFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
+  ${Ex_Rpt_TwfChg_Abandon:-}
 }
 ###########################################################
 RPT.TwfNew {
   $RptTwf1NewFields
+  ${Ex_Rpt_TwfNew:-}
 }
 RPT.TwfRpt {
   $RptTwf1NewFields
+  ${Ex_Rpt_TwfRpt:-}
 }
 RPT.TwfChg {
   $RptTwf1ChgFields
+  ${Ex_Rpt_TwfChg:-}
 }
 RPT.TwfFil {
   MatchKey
   MatchTime/Time
   MatchQty /Qty
   MatchPri /Pri
+  ${Ex_Rpt_TwfFil:-}
 }
 RPT.TwfFil2 {
   MatchKey
@@ -83,6 +90,7 @@ RPT.TwfFil2 {
   MatchQty /Qty
   MatchPri1/Pri
   MatchPri2/PriLeg2
+  ${Ex_Rpt_TwfFil2:-}
 }
 ###########################################################
 $RptTwfOrd1Last = {
@@ -97,23 +105,33 @@ RPT.TwfOrd : TwfNew {
   $RptOrd1Qty
   $RptTwfOrd1Last
   PosEff
+  ${Ex_Rpt_TwfOrd_All:-}
+  ${Ex_Rpt_TwfOrd_TwfNew:-}
 }
 RPT.TwfOrd : TwfRpt {
   $RptOrd1Qty
   $RptTwfOrd1Last
   PosEff
+  ${Ex_Rpt_TwfOrd_All:-}
+  ${Ex_Rpt_TwfOrd_TwfRpt:-}
 }
 RPT.TwfOrd : TwfChg {
   $RptOrd1Qty
   $RptTwfOrd1Last
+  ${Ex_Rpt_TwfOrd_All:-}
+  ${Ex_Rpt_TwfOrd_TwfChg:-}
 }
 RPT.TwfOrd : TwfFil {
   $RptOrd1Qty
   $RptOrdCum
+  ${Ex_Rpt_TwfOrd_All:-}
+  ${Ex_Rpt_TwfOrd_TwfFil:-}
 }
 RPT.TwfOrd : TwfFil2 {
   $RptOrd1Qty
   $RptOrdCum
   Leg1CumAmt
   Leg2CumAmt
+  ${Ex_Rpt_TwfOrd_All:-}
+  ${Ex_Rpt_TwfOrd_TwfFil2:-}
 }
