--- a/f9omsrc/forms/ApiTwf7Req.cfg
+++ b/f9omsrc/forms/ApiTwf7Req.cfg
@@ -13,4 +13,5 @@ $ApiReqTwf7New = $ApiReqTwf0New
 REQ.TwfNewQR, $Tx_TwfNewQR {
   /Kind = $RxKind_RequestNew
   $ApiReqTwf7New
+  ${Ex_Req_TwfNewQR:-}
 }
