--- a/f9omsrc/forms/ApiTwf7Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf7Rpt.cfg
@@ -21,18 +21,22 @@ RPT.TwfNewQR : abandon {
   $RptTwf7NewFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
+  ${Ex_Rpt_TwfNewQR_Abandon:-}
 }
 RPT.TwfRptQR : abandon {
   $RptTwf7NewFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
+  ${Ex_Rpt_TwfRptQR_Abandon:-}
 }
 ###########################################################
 RPT.TwfNewQR {
   $RptTwf7NewFields
+  ${Ex_Rpt_TwfNewQR:-}
 }
 RPT.TwfRptQR {
   $RptTwf7NewFields
+  ${Ex_Rpt_TwfRptQR:-}
 }
 ###########################################################
 $RptTwfOrdQR = {
@@ -42,7 +46,11 @@ $RptTwfOrdQR = {
 }
 RPT.TwfOrdQR : TwfNewQR {
   $RptTwfOrdQR
+  ${Ex_Rpt_TwfOrdQR_All:-}
+  ${Ex_Rpt_TwfOrdQR_TwfNewQR:-}
 }
 RPT.TwfOrdQR : TwfRptQR {
   $RptTwfOrdQR
+  ${Ex_Rpt_TwfOrdQR_All:-}
+  ${Ex_Rpt_TwfOrdQR_TwfRptQR:-}
 }
