--- a/f9omsrc/forms/ApiTwf9Req.cfg
+++ b/f9omsrc/forms/ApiTwf9Req.cfg
@@ -23,6 +23,7 @@ $ApiReqTwf9New = {
 REQ.TwfNewQ, $Tx_TwfNewQ {
   Kind = $RxKind_RequestNew
   $ApiReqTwf9New
+  ${Ex_Req_TwfNewQ:-}
 }
 
 # 台灣期權回報補單要求.
@@ -36,6 +37,7 @@ REQ.TwfRptQ, $Tx_TwfRptQ {
   Side
   BidBeforeQty
   OfferBeforeQty  
+  ${Ex_Req_TwfRptQ:-}
 }
 # --------------------------------------
 # 台灣期權報價 [刪改查] 要求.
@@ -46,4 +48,5 @@ REQ.TwfChgQ, $Tx_TwfChg {
   BidPri
   OfferPri
   $ApiReqTwfDcqBase
+  ${Ex_Req_TwfChgQ:-}
 }
