--- a/f9omsrc/forms/ApiTwf9Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf9Rpt.cfg
@@ -40,11 +40,13 @@ RPT.TwfNewQ : abandon {
   $RptTwf9NewFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
+  ${Ex_Rpt_TwfNewQ_Abandon:-}
 }
 RPT.TwfRptQ : abandon {
   $RptTwf9NewFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
+  ${Ex_Rpt_TwfRptQ_Abandon:-}
 }
 
 $RptTwf9ChgFields = {
@@ -58,16 +60,20 @@ RPT.TwfChgQ : abandon {
   $RptTwf9ChgFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
+  ${Ex_Rpt_TwfChgQ_Abandon:-}
 }
 ###########################################################
 RPT.TwfNewQ {
   $RptTwf9NewFields
+  ${Ex_Rpt_TwfNewQ:-}
 }
 RPT.TwfRptQ {
   $RptTwf9NewFields
+  ${Ex_Rpt_TwfRptQ:-}
 }
 RPT.TwfChgQ {
   $RptTwf9ChgFields
+  ${Ex_Rpt_TwfChgQ:-}
 }
 
 # 與一般單的成交回報相同, 但多了一個 Side 欄位.
@@ -77,6 +83,7 @@ RPT.TwfFil {
   MatchQty /Qty
   MatchPri /Pri
   MatchSide/Side
+  ${Ex_Rpt_TwfFil:-}
 }
 
 ###########################################################
@@ -101,14 +108,20 @@ $RptTwfOrd9Last = {
 RPT.TwfOrdQ : TwfNewQ {
   $RptTwfOrd9Qty
   $RptTwfOrd9Last
+  ${Ex_Rpt_TwfOrdQ_All:-}
+  ${Ex_Rpt_TwfOrdQ_TwfNewQ:-}
 }
 RPT.TwfOrdQ : TwfRptQ {
   $RptTwfOrd9Qty
   $RptTwfOrd9Last
+  ${Ex_Rpt_TwfOrdQ_All:-}
+  ${Ex_Rpt_TwfOrdQ_TwfRptQ:-}
 }
 RPT.TwfOrdQ : TwfChgQ {
   $RptTwfOrd9Qty
   $RptTwfOrd9Last
+  ${Ex_Rpt_TwfOrdQ_All:-}
+  ${Ex_Rpt_TwfOrdQ_TwfChgQ:-}
 }
 RPT.TwfOrdQ : TwfFil {
   $RptTwfOrd9Qty
@@ -117,4 +130,6 @@ RPT.TwfOrdQ : TwfFil {
   BidCumAmt
   OfferCumQty
   OfferCumAmt
+  ${Ex_Rpt_TwfOrdQ_All:-}
+  ${Ex_Rpt_TwfOrdQ_TwfFil:-}
 }
