--- a/f9omsrc/forms/ApiTwfAll.cfg
+++ b/f9omsrc/forms/ApiTwfAll.cfg
@@ -4,6 +4,27 @@
 # API交易表單設定: 載入全部TWF.API表單
 #
 # ----------------------------------------------------------------------------
+
+#################################################################
+# 可在 $include: ApiTwfAll.cfg 之前, 設定券商自訂的額外欄位,
+# 請參考 ApiTwf*Req.cfg 及 ApiTwf*Rpt.cfg 裡面的 ${Ex_XXX:-} 設定,
+#
+# 範例:
+# 在載入模組設定時, 載入券商自訂的 ApiTwfBRK.cfg 設定檔:
+# ss,Enabled=Y,EntryName=OmsRcServerAgent,Args='OmsCore=omstwf|Cfg=$TxLang={zh} $include:forms/ApiTwfBRK.cfg|AddTo=FpSession/OmsRcSvr'   /MaPlugins/iOmsRcAgentF
+#
+# === ApiTwfBRK.cfg 的內容範例 ===
+# $Ex_Rpt_TwfOrd_All = BrkRptFld,券商自訂回報欄位
+#
+# $Ex_Rpt_TwfOrd_TwfNew = {
+#     TwfNewBrkFld1,券商自訂新單要求欄位1
+#     TwfNewBrkFld2,券商自訂新單要求欄位2
+# }
+#
+# $include: ApiTwfAll.cfg
+#
+
+#################################################################
 $TxLang = ${TxLang:-zh}     # 如果「沒設定$TxLang」或「$TxLang為空白」: 則使用正體中文(zh).
 $include: Api_${TxLang}.cfg # 載入翻譯檔.
 
