--- a/f9omsrc/forms/ApiTwsAll.cfg
+++ b/f9omsrc/forms/ApiTwsAll.cfg
@@ -4,6 +4,27 @@
 # API交易表單設定: 載入全部TWS.API表單
 #
 # ----------------------------------------------------------------------------
+
+#################################################################
+# 可在 $include: ApiTwsAll.cfg 之前, 設定券商自訂的額外欄位,
+# 請參考 ApiTwsReq.cfg 及 ApiTwsRpt.cfg 裡面的 ${Ex_XXX:-} 設定,
+#
+# 範例:
+# 在載入模組設定時, 載入券商自訂的 ApiTwsBRK.cfg 設定檔:
+# ss,Enabled=Y,EntryName=OmsRcServerAgent,Args='OmsCore=omstws|Cfg=$TxLang={zh} $include:forms/ApiTwsBRK.cfg|AddTo=FpSession/OmsRcSvr'   /MaPlugins/iOmsRcAgent
+#
+# === ApiTwsBRK.cfg 的內容範例 ===
+# $Ex_Rpt_TwsOrd_All = BrkRptFld,券商自訂回報欄位
+#
+# $Ex_Rpt_TwsOrd_TwsNew = {
+#     TwsNewBrkFld1,券商自訂新單要求欄位1
+#     TwsNewBrkFld2,券商自訂新單要求欄位2
+# }
+#
+# $include: ApiTwsAll.cfg
+#
+
+#################################################################
 $TxLang = ${TxLang:-zh}     # 如果「沒設定$TxLang」或「$TxLang為空白」: 則使用正體中文(zh).
 $include: Api_${TxLang}.cfg # 載入翻譯檔.
 
