--- a/f9omsrc/forms/ApiTwsReq.cfg
+++ b/f9omsrc/forms/ApiTwsReq.cfg
@@ -37,6 +37,7 @@ $ApiReqTwsNew = {
 REQ.TwsNew, $Tx_TwsNew {
   Kind = $RxKind_RequestNew
   $ApiReqTwsNew
+  ${Ex_Req_TwsNew:-}
 }
 
 # 台灣證券回報補單要求.
@@ -48,6 +49,7 @@ REQ.TwsRpt, $Tx_TwsRpt {
   ReportSt = f2   # ExchangeAccepted = 0xf2
   ErrCode
   ExgTime
+  ${Ex_Req_TwsRpt:-}
 }
 # --------------------------------------
 # 刪改查要求: 必須提供可找回原委託的Key:
@@ -65,4 +67,5 @@ REQ.TwsChg, $Tx_TwsChg {
   PriType
   Pri
   $ApiReqTwsDcq
+  ${Ex_Req_TwsChg:-}
 }
