--- a/f9omsrc/forms/ApiTwsRpt.cfg
+++ b/f9omsrc/forms/ApiTwsRpt.cfg
@@ -15,7 +15,6 @@ $include: ApiBase.cfg
 # * 接下來才是設定檔定義的回報表單.
 ###########################################################
 
-
 ###########################################################
 # 下單要求失敗, 沒有對應的 order.
 # ---------------------------------------------------------
@@ -46,11 +45,13 @@ RPT.TwsNew : abandon {
   $RptTwsNewFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
+  ${Ex_Rpt_TwsNew_Abandon:-}
 }
 RPT.TwsRpt : abandon {
   $RptTwsNewFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
+  ${Ex_Rpt_TwsRpt_Abandon:-}
 }
 
 $RptTwsChgFields = {
@@ -65,22 +66,27 @@ RPT.TwsChg : abandon {
   $RptTwsChgFields
   ErrCode/ = %AbandonErrCode
   Message/ = %AbandonReason
+  ${Ex_Rpt_TwsChg_Abandon:-}
 }
 ###########################################################
 RPT.TwsNew {
   $RptTwsNewFields
+  ${Ex_Rpt_TwsNew:-}
 }
 RPT.TwsRpt {
   $RptTwsNewFields
+  ${Ex_Rpt_TwsRpt:-}
 }
 RPT.TwsChg {
   $RptTwsChgFields
+  ${Ex_Rpt_TwsChg:-}
 }
 RPT.TwsFil {
   MatchKey
   MatchTime/Time
   MatchPri /Pri
   MatchQty /Qty
+  ${Ex_Rpt_TwsFil:-}
 }
 ###########################################################
 RPT.TwsOrd : TwsNew {
@@ -90,6 +96,8 @@ RPT.TwsOrd : TwsNew {
   LastPri
   LastPriType
   LastPriTime
+  ${Ex_Rpt_TwsOrd_All:-}
+  ${Ex_Rpt_TwsOrd_TwsNew:-}
 }
 RPT.TwsOrd : TwsRpt {
   $RptOrd1Qty
@@ -98,6 +106,8 @@ RPT.TwsOrd : TwsRpt {
   LastPri
   LastPriType
   LastPriTime
+  ${Ex_Rpt_TwsOrd_All:-}
+  ${Ex_Rpt_TwsOrd_TwsRpt:-}
 }
 RPT.TwsOrd : TwsChg {
   $RptOrd1Qty
@@ -105,8 +115,12 @@ RPT.TwsOrd : TwsChg {
   LastPri
   LastPriType
   LastPriTime
+  ${Ex_Rpt_TwsOrd_All:-}
+  ${Ex_Rpt_TwsOrd_TwsChg:-}
 }
 RPT.TwsOrd : TwsFil {
   $RptOrd1Qty
   $RptOrdCum
+  ${Ex_Rpt_TwsOrd_All:-}
+  ${Ex_Rpt_TwsOrd_TwsFil:-}
 }
