調整 $Tx_OType 的 Description;

--- a/f9omsrc/forms/Api_zh.cfg
+++ b/f9omsrc/forms/Api_zh.cfg
@@ -52,7 +52,7 @@ $Tx_ClOrdId       = 自訂Id,         使用者自訂Id,任意文數字
 $Tx_BrkId         = 券商代號
 $Tx_IvacNo        = 投資人帳號,     投資人帳號含檢查碼
 $Tx_SubacNo       = 子帳
-$Tx_OType         = 資券現,         {0=現,1=資,2=券}      # 1=代辦融資,2=代辦融券,3=自辦融資,4=自辦融券
+$Tx_OType         = 資券現,         {0=現,d=現沖,1=代資,2=代券,3=自資,4=自券,5=券5,6=券6}  # 1=代辦融資,2=代辦融券,3=自辦融資,4=自辦融券
 $Tx_Side          = 買賣別,         {B=買進,S=賣出}
 $Tx_Pri           = 價格
 $Tx_QtyChg        = 數量,           '=0:刪單,<0:刪減數量,>0:改後數量'
