Sc_Symbol_PriLmt() 增加檢查 Price TickSize;

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -29,6 +29,7 @@ $FAMT = U8:,
 10104 = Over PriUpLmt                  | 超過漲停價
 10105 = Over PriDnLmt                  | 超過跌停價
 10106 = Symbol fixed price not found   | 定價交易商品不存在(T33)
+10107 = Bad price tick size            | 價格檔位有誤
 
 # --------------------------------------------
 10150 = Bad qty                        | 數量有誤(數量不可<=0)
