Add ec=10108, 商品禁止下單,原因={:DenyReason:ES:{S1=全額交割|S2=全額分盤|W1=處置股票|W2=再次處置股票|W3=彈性處置股票}:}

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -30,6 +30,9 @@ $FAMT = U8:,
 10105 = Over PriDnLmt                  | 超過跌停價
 10106 = Symbol fixed price not found   | 定價交易商品不存在(T33)
 10107 = Bad price tick size            | 價格檔位有誤
+# DenyReason=S1 或 S2 或 W1 或 W2 或 W3;
+# S1:T30.SETTYPE=1;  S2:T30.SETTYPE=2;  W1:T30.MARK-W=1;  W2:T30.MARK-W=2; ...
+10108 =                                | 商品禁止下單,原因={:DenyReason:ES:{S1=全額交割|S2=全額分盤|W1=處置股票|W2=再次處置股票|W3=彈性處置股票}:}
 
 # --------------------------------------------
 10150 = Bad qty                        | 數量有誤(數量不可<=0)
