RcSv.API: 支援完整 Seed 操作(增加: GridView, Write, Remove, Command); 訂閱與一般操作可同時進行. C#: Add: f9oms.Layout.ExParam_; C: Add: f9OmsRc_Layout.ExParam_; NamedSeed::OnSeedCommand() 增加 SeedVisitor* 參數, 讓執行者可以取得登入認證.

--- a/f9omsrc/CMakeLists.txt
+++ b/f9omsrc/CMakeLists.txt
@@ -128,8 +128,11 @@ set(f9omsrcapi_src
 
  ../../fon9/fon9/rc/RcSeedVisitorClient.cpp
  ../../fon9/fon9/rc/RcSeedVisitorClientCAPI.cpp
- ../../fon9/fon9/rc/RcSeedVisitorClientReq.cpp
  ../../fon9/fon9/rc/RcSvc.cpp
+ ../../fon9/fon9/rc/RcSvcAck.cpp
+ ../../fon9/fon9/rc/RcSvcReq.cpp
+ ../../fon9/fon9/rc/RcSvcReqSeed.cpp
+ ../../fon9/fon9/rc/RcSvcReqSubr.cpp
  ../../fon9/fon9/rc/RcSvStreamDecoder.cpp
 
  ../../fon9/fon9/seed/Layout.cpp
