omsapi.forms.RPT.TwsOrd 增加「IniClOrdId/ = %IniField:ClOrdId」

--- a/f9omsrc/forms/ApiTwsRpt.cfg
+++ b/f9omsrc/forms/ApiTwsRpt.cfg
@@ -117,10 +117,12 @@ RPT.TwsOrd : TwsChg {
   LastPriTime
   ${Ex_Rpt_TwsOrd_All:-}
   ${Ex_Rpt_TwsOrd_TwsChg:-}
+  IniClOrdId/ = %IniField:ClOrdId
 }
 RPT.TwsOrd : TwsFil {
   $RptOrd1Qty
   $RptOrdCum
   ${Ex_Rpt_TwsOrd_All:-}
   ${Ex_Rpt_TwsOrd_TwsFil:-}
+  IniClOrdId/ = %IniField:ClOrdId
 }
