ErrCode.10108: 增加 C3=創新板|c=外幣商品; C3來自T30; c來自T32; omsrcapi: 增加 include/fon9/fmkt/FmktTypes.h;

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -32,7 +32,7 @@ $FAMT = U8:,
 10107 = Bad price tick size            | 價格檔位有誤
 # DenyReason=S1 或 S2 或 W1 或 W2 或 W3;
 # S1:T30.SETTYPE=1;  S2:T30.SETTYPE=2;  W1:T30.MARK-W=1;  W2:T30.MARK-W=2; ...
-10108 =                                | 商品禁止下單,原因={:DenyReason:ES:{S1=全額交割|S2=全額分盤|W1=處置股票|W2=再次處置股票|W3=彈性處置股票}:}
+10108 =                                | 商品禁止下單,原因={:DenyReason:ES:{S1=全額交割|S2=全額分盤|W1=處置股票|W2=再次處置股票|W3=彈性處置股票|C3=創新板|c=外幣商品}:}
 10109 =                                | 原為市價單,不可改價
 10110 =                                | 不可改為市價
 
