Add: 10400、10500; 資、券庫存不足;

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -77,5 +77,18 @@ zh: 整戶額度不足 {:Over:$FAMT:}: 限額={:LmtAmt:$FAMT:}/已用={:Used:$FA
 }
 
 # --------------------------------------------
+# 融資庫存不足:
+10400 = {
+en: -
+zh: 資庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/賣未成交={:Leaves:$FQTY:}/賣成交={:Filled:$FQTY:}/此筆新增={:Add:$FQTY:}
+}
 
+# --------------------------------------------
+# 融券庫存不足:
+10500 = {
+en: -
+zh: 券庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/買未成交={:Leaves:$FQTY:}/買成交={:Filled:$FQTY:}/此筆新增={:Add:$FQTY:}
+}
+
+# --------------------------------------------
 10800 = Related stock | 利害關係人股票禁止下單
