Add: ErrCode: 10203=帳號現股只能庫存了結; 10204=帳號信用只能庫存了結;

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -64,6 +64,8 @@ zh: 現股庫存不足 {:Over:$FQTY:}: 庫存={:Bal:$FQTY:}/賣未成交={:Leave
 # IFlags=R,S
 10201 = | 帳號禁止現股當沖/旗標={:IFlags:}
 10202 = | 商品禁止現股當沖
+10203 = | 帳號現股只能庫存了結
+10204 = | 帳號信用只能庫存了結
 # 現股賣出(OType='0',可現股當沖), 帳號自有可賣數量不足. 可賣=庫存+買可沖(買成交)-賣用量(賣剩餘+賣成交)
 10210 = | 可賣不足 {:Over:$FQTY:}: 可賣={:Self:$FQTY:}/此筆新增={:Add:$FQTY:}/庫存={:Bal:$FQTY:}/買可沖={:Filled:$FQTY:}/已賣={:Used:$FQTY:}
 # 現股當沖賣出(OType='d',但不可先賣當沖,原因請參考RFlags), 帳號自有可賣數量不足.
