ErrCode: 10108 增加 k:禁止下單的商品種類;

--- a/OmsErrCode/OmsErrCode.10xxx.cfg
+++ b/OmsErrCode/OmsErrCode.10xxx.cfg
@@ -32,7 +32,11 @@ $FAMT = U8:,
 10107 = Bad price tick size            | 價格檔位有誤
 # DenyReason=S1 或 S2 或 W1 或 W2 或 W3;
 # S1:T30.SETTYPE=1;  S2:T30.SETTYPE=2;  W1:T30.MARK-W=1;  W2:T30.MARK-W=2; ...
-10108 =                                | 商品禁止下單,原因={:DenyReason:ES:{S1=全額交割|S2=全額分盤|W1=處置股票|W2=再次處置股票|W3=彈性處置股票|C3=創新板|c=外幣商品}:}
+# k:禁止下單的商品種類(enum f9tws_SymbKind 在 f9tws/TwsTypes.h) 16進位, 例:
+#  03=換股權利證書; 04=附認股權特別股; 05=受益憑證(封閉式基金);
+#  40=不動產資產信託受益證券; 41=不動產投資信託受益證券; 42=金融資產證券化受益證券;
+#  60=存託憑證(台灣)TDR; 61=存託憑證 可轉換公司債; 62=存託憑證 附認股權公司債; 63=存託憑證 附認股權公司債_履約後之公司債; 64=存託憑證 認股權憑證;
+10108 =                                | 商品禁止下單,原因={:DenyReason:ES:{S1=全額交割|S2=全額分盤|W1=處置股票|W2=再次處置股票|W3=彈性處置股票|C3=創新板|c=外幣商品|k=商品種類}:}
 10109 =                                | 原為市價單,不可改價
 10110 =                                | 不可改為市價
 
