--- a/f9omsrc/forms/ApiTwf0Req.cfg
+++ b/f9omsrc/forms/ApiTwf0Req.cfg
@@ -21,6 +21,7 @@ $ApiReqTwf0New = {
   Symbol,  $Tx_SymbolTwf
   IvacNo,  $Tx_IvacNo
   SubacNo, $Tx_SubacNo
+  VaTimeMS,$Tx_VaTimeMS
 
   # D:專線下單(含VPN、封閉型專屬網路); A:應用程式介面(API)下單;
   # M:行動載具下單;  W:網站(Web Site)下單; P:個人電腦軟體下單;
