--- a/f9omsrc/forms/ApiTwsReq.cfg
+++ b/f9omsrc/forms/ApiTwsReq.cfg
@@ -30,6 +30,8 @@ $ApiReqTwsNew = {
   Pri,         $Tx_Pri
   Qty,         $Tx_QtyTws
   TimeInForce, $Tx_TimeInForce
+
+  VaTimeMS,    $Tx_VaTimeMS
 }
 # 台灣證券新單要求.
 # 或提供全部欄位的刪改查:
