--- a/f9omsrc/forms/Api_zh.cfg
+++ b/f9omsrc/forms/Api_zh.cfg
@@ -60,3 +60,4 @@ $Tx_OrdNo         = 委託書號
 $Tx_IniSNO        = 初始序號,       刪改查要操作的初始下單序號(各主機自編的序號)
 $Tx_TimeInForce   = 時間條件,       {=當日有效,I=IOC,F=FOK}
 $Tx_TimeInForceQ  = 時間條件,       {=當日有效,8=期交所定時刪除}
+$Tx_VaTimeMS      = 有效執行時間,   從「收到下單要求」到「要送出」時,若超過時間(單位:ms),則拒絕送出
