可在 cmake 之前定義: F9OMS_CXX_FLAGS = -DF9OMS_ORDNO_IS_NUM 設定 [委託書序號] 為數字;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ set(CXX_FLAGS
  -Wwrite-strings
  -fexec-charset=UTF-8
  -std=c++11
+ ${F9OMS_CXX_FLAGS}
+ ${FON9_CXX_FLAGS}
  )
 string(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")
 
@@ -29,6 +31,8 @@ set(C_FLAGS
  -Wshadow
  -Wwrite-strings
  -fexec-charset=UTF-8
+ ${F9OMS_C_FLAGS}
+ ${FON9_C_FLAGS}
  )
 string(REPLACE ";" " " CMAKE_C_FLAGS "${C_FLAGS}")
 
