若要使用 OmsRcSyn 同步 twf, 則必須提供 OrderSource, InfoSource 欄位, 否則對方送出的刪改查, 若沒有這些欄位, 則會被期交所直接斷線!

--- a/f9omsrc/forms/ApiTwf0Rpt.cfg
+++ b/f9omsrc/forms/ApiTwf0Rpt.cfg
@@ -14,4 +14,9 @@ $RptTwf0NewFields = {
   IvacNo
   SubacNo
   Symbol
+
+# 若要使用 OmsRcSyn 則必須提供這些欄位給對方 f9oms,
+# 否則對方送出的刪改查, 沒有這些欄位會被期交所斷線?!
+  OrderSource
+  InfoSource
 }
