--- a/f9omstw/CMakeLists.txt
+++ b/f9omstw/CMakeLists.txt
@@ -50,6 +50,7 @@ set(f9omstw_src
  OmsPoIvListAgent.cpp
  OmsPoUserRights.cpp
  OmsPoUserRightsAgent.cpp
+ OmsPoRequest.cpp
 )
 add_library(f9omstw_s STATIC ${f9omstw_src})
 target_link_libraries(f9omstw_s fon9_s pthread dl)
